--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -51,8 +51,8 @@ jobs:
                   server-id: central
                   server-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
                   server-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-                  gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
-                  gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+                  # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+                  # gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
             - name: Set version in pom.xml
               if: ${{ github.event.inputs.version != '' }}
@@ -65,16 +65,13 @@ jobs:
                   echo "version=$VERSION" >> $GITHUB_OUTPUT
                   echo "Publishing version: $VERSION" >> $GITHUB_STEP_SUMMARY
 
-            - name: Build and verify
-              run: mvn verify -DskipTests
-
-            - name: Deploy to Maven Central
-              run: mvn -X deploy -DskipTests -Prelease
+            - name: Build and Deploy to Maven Central
+              run: mvn -X verify deploy -DskipTests -Prelease
               env:
                   MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
                   MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-                  MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
-                  MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+                  # MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+                  # MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
 
     github-release:
         name: Create GitHub Release
