--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -53,10 +53,10 @@ jobs:
                   java-version: "17"
                   distribution: "temurin"
                   server-id: central
-                  server-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-                  server-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+                  server-username: MAVEN_USERNAME
+                  server-password: MAVEN_PASSWORD
                   gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
-                  gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+                  gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
             - name: Determine versions
               id: versions
@@ -91,6 +91,9 @@ jobs:
                   echo "- **Release version:** $RELEASE_VERSION" >> $GITHUB_STEP_SUMMARY
                   echo "- **Next development version:** $DEV_VERSION" >> $GITHUB_STEP_SUMMARY
 
+            - name: Verify Build
+              run: mvn clean verify
+
             - name: Prepare Release
               run: |
                   mvn -B release:prepare \
@@ -99,12 +102,20 @@ jobs:
                     -DtagNameFormat=v@{project.version} \
                     -DpushChanges=true \
                     -Darguments="-DskipTests"
+              env:
+                  MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+                  MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+                  MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
             - name: Perform Release and Deploy to Maven Central
               run: |
                   mvn -B release:perform \
                     -Dgoals="deploy" \
                     -Darguments="-DskipTests -Prelease"
+              env:
+                  MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+                  MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+                  MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
             - name: Update documentation with the released version
               run: |
@@ -122,6 +133,9 @@ jobs:
 
                   # Commit
                   git commit -m "Update documentation for version ${VERSION}"
+
+                  # Push
+                  git push origin main
 
     github-release:
         name: Create GitHub Release
