--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,37 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.1</version>
             </plugin>
+            <!-- Copy README.md and images to site directory -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-docs-to-site</id>
+                        <phase>pre-site</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <copy file="${project.basedir}/README.md" 
+                                      tofile="${project.basedir}/src/site/markdown/index.md"/>
+                                <!-- Copy images referenced in README.md to site root -->
+                                <mkdir dir="${project.basedir}/src/site/resources"/>
+                                <copy todir="${project.basedir}/src/site/resources">
+                                    <fileset dir="${project.basedir}">
+                                        <include name="*.png"/>
+                                        <include name="*.jpg"/>
+                                        <include name="*.gif"/>
+                                        <include name="*.svg"/>
+                                    </fileset>
+                                </copy>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- Clone the official copilot-sdk repository for test resources -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -178,8 +209,44 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <!-- Maven Site Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>4.0.0-M16</version>
+            </plugin>
         </plugins>
     </build>
+
+    <!-- Reporting plugins for Maven Site -->
+    <reporting>
+        <plugins>
+            <!-- Project Info Reports -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.9.0</version>
+            </plugin>
+            <!-- Javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.12.0</version>
+                <configuration>
+                    <show>public</show>
+                    <nohelp>true</nohelp>
+                    <doclint>none</doclint>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>javadoc</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <profiles>
         <profile>
