docs: add disclaimer to README, documentation, and release notes

--- a/.github/workflows/notes.template
+++ b/.github/workflows/notes.template
@@ -1,4 +1,6 @@
 # Installation
+
+> ⚠️ **Disclaimer:** This is an **unofficial, community-driven SDK** and is **not supported or endorsed by GitHub**. Use at your own risk.
   
 📦 [View on Maven Central](https://central.sonatype.com/artifact/${GROUP_ID}/${ARTIFACT_ID}/${VERSION})
 
