--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -70,6 +70,10 @@ jobs:
           COPILOT_CLI_PATH: ${{ steps.setup-copilot.outputs.path }}
         run: mvn verify
 
+      - name: Generate Test Report Summary
+        if: always()
+        uses: ./.github/actions/test-report
+
       - name: Upload Test Reports
         uses: actions/upload-artifact@v4
         if: always()
