--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -82,3 +82,11 @@ jobs:
           name: test-reports
           path: target/surefire-reports/
           retention-days: 14
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-report
+          path: target/site/jacoco/
+          retention-days: 14
