--- a/pom.xml
+++ b/pom.xml
@@ -413,7 +413,11 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.12</version>
+                <version>0.8.14</version>
+                <configuration>
+                    <!-- Must match destFile from build plugin's prepare-agent execution -->
+                    <dataFile>${project.build.directory}/jacoco-test-results/sdk-tests.exec</dataFile>
+                </configuration>
                 <reportSets>
                     <reportSet>
                         <reports>
