Add claude-opus-4.6 model to agent_assignment in weekly sync workflow

--- a/.github/workflows/weekly-upstream-sync.yml
+++ b/.github/workflows/weekly-upstream-sync.yml
@@ -140,7 +140,8 @@ jobs:
             "agent_assignment": {
               "target_repo": "${{ github.repository }}",
               "base_branch": "main",
-              "custom_instructions": $(echo "$CUSTOM_INSTRUCTIONS" | jq -Rs .)
+              "custom_instructions": $(echo "$CUSTOM_INSTRUCTIONS" | jq -Rs .),
+              "model": "claude-opus-4.6"
             }
           }
           EOF
