--- a/.github/workflows/copilot-issue.yml
+++ b/.github/workflows/copilot-issue.yml
@@ -22,6 +22,6 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: '${{ inputs.title }}',
-              assignees: ['copilot']
+              assignees: ['copilot-swe-bot']
             });
             core.notice(`Created issue #${issue.data.number}: ${issue.data.html_url}`);
